# Standard-Library-WSGI

./: README.md  index.html  pyproject.toml  requirements.txt  simple_wsgi_app.py  wsgi_server.py
